--- a/index.html
+++ b/index.html
@@ -9,31 +9,54 @@
 <body>
     <header>
         <h1>Impacto da Pecuária no Meio Ambiente</h1>
-        <p>Entenda como a atividade pecuária influencia o planeta</p>
+        <p>Como a criação de animais afeta o planeta e o que podemos fazer</p>
     </header>
 
     <main>
         <section>
             <img src="imagens/pecuaria.jpg" alt="Pecuária">
-            <h2>O que é a Pecuária?</h2>
-            <p>A pecuária é a criação de animais para consumo humano, como gado, porcos e aves. Essa atividade está presente em todo o mundo e tem grande importância econômica.</p>
+            <h2>📌 O que é a Pecuária?</h2>
+            <ul>
+                <li><strong>Definição:</strong> É a criação de animais como bois, porcos, aves e ovelhas para produção de alimentos e outros produtos.</li>
+                <li><strong>Importância econômica:</strong> Representa uma parte significativa da economia agrícola no Brasil e no mundo.</li>
+                <li><strong>Consumo em massa:</strong> Com a crescente demanda por carne e laticínios, a produção pecuária se expandiu rapidamente.</li>
+            </ul>
         </section>
 
         <section>
             <img src="imagens/desmatamento.jpg" alt="Desmatamento">
-            <h2>Desmatamento</h2>
-            <p>A expansão da pecuária é uma das principais causas do desmatamento, principalmente na Amazônia, onde florestas são derrubadas para dar lugar a pastagens.</p>
+            <h2>🌳 Desmatamento</h2>
+            <ul>
+                <li><strong>Abertura de pastagens:</strong> Florestas são derrubadas para dar lugar a campos de pasto.</li>
+                <li><strong>Amazônia sob ameaça:</strong> Mais de 60% do desmatamento da floresta amazônica está relacionado à pecuária.</li>
+                <li><strong>Perda de biodiversidade:</strong> Animais e plantas nativos perdem seus habitats, o que pode causar extinções.</li>
+            </ul>
         </section>
 
         <section>
-            <img src="imagens/emissao_gases.jpg" alt="Gases do efeito estufa">
-            <h2>Emissão de Gases</h2>
-            <p>O gado bovino emite grandes quantidades de metano, um gás de efeito estufa que contribui para o aquecimento global. A pecuária também está ligada à emissão de CO₂ e outros poluentes.</p>
+            <img src="imagens/emissao_gases.jpg" alt="Emissão de Gases">
+            <h2>🌍 Emissão de Gases do Efeito Estufa</h2>
+            <ul>
+                <li><strong>Metano (CH₄):</strong> Produzido principalmente pela digestão dos ruminantes (bois e vacas).</li>
+                <li><strong>Dióxido de carbono (CO₂):</strong> Emissões ligadas ao uso de combustíveis fósseis e mudanças no uso da terra.</li>
+                <li><strong>Óxidos de nitrogênio (N₂O):</strong> Liberados pelo uso de fertilizantes nas pastagens.</li>
+                <li><strong>Impacto climático:</strong> A pecuária é responsável por cerca de 14,5% das emissões globais de gases do efeito estufa.</li>
+            </ul>
+        </section>
+
+        <section>
+            <h2>🌱 Alternativas Sustentáveis</h2>
+            <ul>
+                <li><strong>Dieta baseada em plantas:</strong> Reduz a demanda por produtos de origem animal.</li>
+                <li><strong>Pecuária regenerativa:</strong> Técnicas que restauram solos e ecossistemas.</li>
+                <li><strong>Redução do desperdício:</strong> Evitar o descarte de alimentos ajuda a reduzir a necessidade de produção.</li>
+                <li><strong>Consumo consciente:</strong> Optar por produtos com certificação ambiental.</li>
+            </ul>
         </section>
     </main>
 
     <footer>
-        <p>Site educativo criado por [Seu Nome]</p>
+        <p>🌿 Site educativo criado por [Seu Nome] | 2025</p>
     </footer>
 </body>
 </html>
