--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </main>
 
     <footer>
-        <p>🌿 Site educativo criado por [Moniky Doria] | 2025</p>
+        <p>🌿 Site educativo criado por Moniky Doria | 2025</p>
     </footer>
 </body>
 </html>
