--- a/index.html
+++ b/index.html
@@ -1,32 +1,62 @@
-<section>
-    <img src="imagens/desmatamento.jpg" alt="Desmatamento">
-    <h2>🌳 Desmatamento</h2>
-    <ul>
-        <li><strong>Conversão de florestas em pastagens:</strong> Uma das principais causas de desmatamento no Brasil é a transformação de florestas tropicais, como a Amazônia, em áreas de pasto para o gado. Isso resulta na perda de milhões de hectares de cobertura vegetal nativa.</li>
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Impacto da Pecuária no Meio Ambiente</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+        <h1>Impacto da Pecuária no Meio Ambiente</h1>
+        <p>Como a criação de animais afeta o planeta e o que podemos fazer</p>
+    </header>
 
-        <li><strong>Impactos ambientais:</strong>
+    <main>
+        <section>
+            <img src="imagens/pecuaria.jpg" alt="Pecuária">
+            <h2>📌 O que é a Pecuária?</h2>
             <ul>
-                <li>Perda da biodiversidade: espécies únicas são extintas ou ameaçadas.</li>
-                <li>Alteração do ciclo da água: árvores são fundamentais para a manutenção da umidade e chuvas.</li>
-                <li>Liberação de carbono: árvores armazenam carbono e, ao serem derrubadas, esse carbono é liberado na atmosfera.</li>
+                <li><strong>Definição:</strong> É a criação de animais como bois, porcos, aves e ovelhas para produção de alimentos e outros produtos.</li>
+                <li><strong>Importância econômica:</strong> Representa uma parte significativa da economia agrícola no Brasil e no mundo.</li>
+                <li><strong>Consumo em massa:</strong> Com a crescente demanda por carne e laticínios, a produção pecuária se expandiu rapidamente.</li>
             </ul>
-        </li>
+        </section>
 
-        <li><strong>Pressão sobre comunidades locais:</strong> Povos indígenas e comunidades tradicionais frequentemente perdem suas terras, cultura e sustento com o avanço da pecuária extensiva.</li>
-    </ul>
+        <section>
+            <img src="imagens/desmatamento.jpg" alt="Desmatamento">
+            <h2>🌳 Desmatamento</h2>
+            <ul>
+                <li><strong>Abertura de pastagens:</strong> Florestas são derrubadas para dar lugar a campos de pasto.</li>
+                <li><strong>Amazônia sob ameaça:</strong> Mais de 60% do desmatamento da floresta amazônica está relacionado à pecuária.</li>
+                <li><strong>Perda de biodiversidade:</strong> Animais e plantas nativos perdem seus habitats, o que pode causar extinções.</li>
+            </ul>
+        </section>
 
-    <h3>✅ Como reduzir o desmatamento sem acabar com o consumo de carne?</h3>
-    <ul>
-        <li><strong>Intensificação sustentável:</strong> Melhorar a produtividade por hectare usando tecnologias agrícolas e manejo de pasto eficiente. Isso evita a necessidade de abrir novas áreas de floresta.</li>
+        <section>
+            <img src="imagens/emissao_gases.jpg" alt="Emissão de Gases">
+            <h2>🌍 Emissão de Gases do Efeito Estufa</h2>
+            <ul>
+                <li><strong>Metano (CH₄):</strong> Produzido principalmente pela digestão dos ruminantes (bois e vacas).</li>
+                <li><strong>Dióxido de carbono (CO₂):</strong> Emissões ligadas ao uso de combustíveis fósseis e mudanças no uso da terra.</li>
+                <li><strong>Óxidos de nitrogênio (N₂O):</strong> Liberados pelo uso de fertilizantes nas pastagens.</li>
+                <li><strong>Impacto climático:</strong> A pecuária é responsável por cerca de 14,5% das emissões globais de gases do efeito estufa.</li>
+            </ul>
+        </section>
 
-        <li><strong>Rotação de pastagem:</strong> Alternar áreas de pasto para dar tempo de recuperação ao solo, reduzindo a degradação e o desmatamento.</li>
+        <section>
+            <h2>🌱 Alternativas Sustentáveis</h2>
+            <ul>
+                <li><strong>Dieta baseada em plantas:</strong> Reduz a demanda por produtos de origem animal.</li>
+                <li><strong>Pecuária regenerativa:</strong> Técnicas que restauram solos e ecossistemas.</li>
+                <li><strong>Redução do desperdício:</strong> Evitar o descarte de alimentos ajuda a reduzir a necessidade de produção.</li>
+                <li><strong>Consumo consciente:</strong> Optar por produtos com certificação ambiental.</li>
+            </ul>
+        </section>
+    </main>
 
-        <li><strong>Carne de origem certificada:</strong> Consumir produtos de empresas que seguem padrões de produção sustentável e rastreável, como o selo "Carne Carbono Neutro" ou "Rainforest Alliance".</li>
-
-        <li><strong>Aproveitamento de áreas já desmatadas:</strong> Reutilizar terras degradadas ou subutilizadas em vez de abrir novas fronteiras agrícolas.</li>
-
-        <li><strong>Políticas públicas e fiscalização:</strong> Apoiar leis que incentivem boas práticas ambientais e combatam o desmatamento ilegal.</li>
-    </ul>
-
-    <p><em>Combater o desmatamento não significa eliminar a pecuária, mas torná-la mais eficiente, consciente e alinhada com a preservação ambiental.</em></p>
-</section>
+    <footer>
+        <p>🌿 Site educativo criado por [Seu Nome] | 2025</p>
+    </footer>
+</body>
+</html>
