--- a/index.html
+++ b/index.html
@@ -1,62 +1,65 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Impacto da Pecuária no Meio Ambiente</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Impacto da Pecuária no Meio Ambiente</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <header>
-        <h1>Impacto da Pecuária no Meio Ambiente</h1>
-        <p>Como a criação de animais afeta o planeta e o que podemos fazer</p>
-    </header>
+  <header>
+    <h1>Impacto da Pecuária no Meio Ambiente</h1>
+    <p>Como a criação de animais afeta o planeta e o que podemos fazer</p>
+  </header>
 
-    <main>
-        <section>
-            <img src="imagens/pecuaria.jpg" alt="Pecuária">
-            <h2>📌 O que é a Pecuária?</h2>
-            <ul>
-                <li><strong>Definição:</strong> É a criação de animais como bois, porcos, aves e ovelhas para produção de alimentos e outros produtos.</li>
-                <li><strong>Importância econômica:</strong> Representa uma parte significativa da economia agrícola no Brasil e no mundo.</li>
-                <li><strong>Consumo em massa:</strong> Com a crescente demanda por carne e laticínios, a produção pecuária se expandiu rapidamente.</li>
-            </ul>
-        </section>
+  <main>
+    <section>
+      <img src="imagens/pecuaria.jpg" alt="Pecuária" />
+      <h2>📌 O que é a Pecuária?</h2>
+      <ul>
+        <li><strong>Definição:</strong> Criação de animais para consumo humano, como bovinos, suínos e aves.</li>
+        <li><strong>Importância econômica:</strong> Gera empregos e alimentos, sendo uma das principais atividades do agronegócio brasileiro.</li>
+        <li><strong>Expansão intensiva:</strong> A demanda por carne estimula a expansão de pastagens, muitas vezes de forma insustentável.</li>
+      </ul>
+    </section>
 
-        <section>
-            <img src="imagens/desmatamento.jpg" alt="Desmatamento">
-            <h2>🌳 Desmatamento</h2>
-            <ul>
-                <li><strong>Abertura de pastagens:</strong> Florestas são derrubadas para dar lugar a campos de pasto.</li>
-                <li><strong>Amazônia sob ameaça:</strong> Mais de 60% do desmatamento da floresta amazônica está relacionado à pecuária.</li>
-                <li><strong>Perda de biodiversidade:</strong> Animais e plantas nativos perdem seus habitats, o que pode causar extinções.</li>
-            </ul>
-        </section>
+    <section>
+      <img src="imagens/desmatamento.jpg" alt="Desmatamento" />
+      <h2>🌳 Desmatamento</h2>
+      <ul>
+        <li><strong>Causa principal:</strong> A pecuária é responsável por cerca de 60% do desmatamento na Amazônia Legal.</li>
+        <li><strong>Conversão de florestas:</strong> Áreas naturais são transformadas em pastagens para o gado, liberando carbono armazenado.</li>
+        <li><strong>Consequências:</strong>
+          <ul>
+            <li>Perda de biodiversidade (extinção de espécies).</li>
+            <li>Comprometimento do ciclo da água e do solo.</li>
+            <li>Aumento de incêndios florestais e erosão.</li>
+          </ul>
+        </li>
+        <li><strong>Pressão social:</strong> Povos indígenas e comunidades tradicionais sofrem com a perda de seus territórios.</li>
+      </ul>
 
-        <section>
-            <img src="imagens/emissao_gases.jpg" alt="Emissão de Gases">
-            <h2>🌍 Emissão de Gases do Efeito Estufa</h2>
-            <ul>
-                <li><strong>Metano (CH₄):</strong> Produzido principalmente pela digestão dos ruminantes (bois e vacas).</li>
-                <li><strong>Dióxido de carbono (CO₂):</strong> Emissões ligadas ao uso de combustíveis fósseis e mudanças no uso da terra.</li>
-                <li><strong>Óxidos de nitrogênio (N₂O):</strong> Liberados pelo uso de fertilizantes nas pastagens.</li>
-                <li><strong>Impacto climático:</strong> A pecuária é responsável por cerca de 14,5% das emissões globais de gases do efeito estufa.</li>
-            </ul>
-        </section>
+      <h3>✅ Como reduzir o desmatamento mantendo a produção de carne?</h3>
+      <ul>
+        <li><strong>Pecuária intensiva sustentável:</strong> Aumentar a produtividade sem expandir para novas áreas.</li>
+        <li><strong>Uso de terras degradadas:</strong> Recuperar áreas já desmatadas e abandonadas para uso produtivo.</li>
+        <li><strong>Rastreabilidade:</strong> Exigir que a carne vendida venha de propriedades que não estejam ligadas ao desmatamento.</li>
+        <li><strong>Educação e políticas públicas:</strong> Incentivar leis, fiscalização e práticas de manejo sustentável.</li>
+      </ul>
+    </section>
 
-        <section>
-            <h2>🌱 Alternativas Sustentáveis</h2>
-            <ul>
-                <li><strong>Dieta baseada em plantas:</strong> Reduz a demanda por produtos de origem animal.</li>
-                <li><strong>Pecuária regenerativa:</strong> Técnicas que restauram solos e ecossistemas.</li>
-                <li><strong>Redução do desperdício:</strong> Evitar o descarte de alimentos ajuda a reduzir a necessidade de produção.</li>
-                <li><strong>Consumo consciente:</strong> Optar por produtos com certificação ambiental.</li>
-            </ul>
-        </section>
-    </main>
+    <section>
+      <img src="imagens/emissao_gases.jpg" alt="Emissão de Gases" />
+      <h2>🌍 Emissão de Gases do Efeito Estufa</h2>
+      <ul>
+        <li><strong>Metano (CH₄):</strong> Produzido pela digestão de ruminantes (fermentação entérica).</li>
+        <li><strong>CO₂ e N₂O:</strong> Derivados da mudança de uso da terra e aplicação de fertilizantes.</li>
+        <li><strong>Impacto total:</strong> A pecuária é responsável por cerca de 14,5% das emissões globais de gases de efeito estufa.</li>
+      </ul>
+    </section>
 
-    <footer>
-        <p>🌿 Site educativo criado por Moniky Doria | 2025</p>
-    </footer>
-</body>
-</html>
+    <section>
+      <h2>🌱 Sustentabilidade e Soluções</h2>
+      <ul>
+        <li><strong>Diminuição do desperdício:</strong> Evitar o descarte de alimentos reduz a necessidade de produção intensiva.</li>
+        <li><strong>Consumo consciente:</strong> Reduzir o consumo excessivo de carn
